fix: vuetify layout issues

--- a/app/assets/css/globals.scss
+++ b/app/assets/css/globals.scss
@@ -3,3 +3,24 @@
   $body-font-family: string.unquote('"MuseoModerno", sans-serif'),
   $heading-font-family: string.unquote('"MuseoModerno", sans-serif')
 );
+
+html,
+body {
+  font-family: 'MuseoModerno', sans-serif;
+}
+
+.v-application {
+  background: radial-gradient(ellipse at 50% 35%, #4c4b47, #2c2b28) !important;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: fixed;
+    inset: 0;
+    background-image: url('/noise.svg');
+    background-repeat: repeat;
+    opacity: 0.15;
+    pointer-events: none;
+    z-index: 0;
+  }
+}
